deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dot-net-core-k8s
  namespace: default
  labels:
    app.kubernetes.io/name: dot-net-core-k8s
    app.kubernetes.io/instance: dot-net-core-k8s
    app.kubernetes.io/managed-by: 'Lee.Myring'
    aadpodidbinding: dev-web-identity-selector
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dot-net-core-k8s
      app.kubernetes.io/instance: dot-net-core-k8s
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dot-net-core-k8s
        app.kubernetes.io/instance: dot-net-core-k8s
        app.kubernetes.io/managed-by: 'Lee.Myring'
        aadpodidbinding: dev-web-identity-selector
    spec:
      containers:
        - name: dot-net-core-k8s
          image: commonwebacr.azurecr.io/oxford/dot-net-core-k8s-test
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: commonwebacr-auth
---
apiVersion: v1
kind: Service
metadata:
  name: dot-net-core-k8s
  namespace: default
  labels:
    app.kubernetes.io/name: dot-net-core-k8s
    app.kubernetes.io/instance: dot-net-core-k8s
    app.kubernetes.io/managed-by: 'Lee.Myring'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dot-net-core-k8s
    app.kubernetes.io/instance: dot-net-core-k8s
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dot-net-core-k8s
  namespace: default
  labels:
    app.kubernetes.io/name: dot-net-core-k8s
    app.kubernetes.io/instance: dot-net-core-k8s
    app.kubernetes.io/managed-by: 'Lee.Myring'
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts: 
        - kvtest.oxford.somo-tools.com
      secretName: oxford-somotools-com-tls
  rules:
    - host: kvtest.oxford.somo-tools.com
      http:
        paths:
          - path: /
            backend:
              serviceName: dot-net-core-k8s
              servicePort: http
